feat: avance reformulacion https://github.com/udistrital/planeacion_cliente/issues/1136
